Finished Work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<p>YOUR NAME</p>
+<html>
+    <header><h1>My Story</h1></header>
+    <body> 
+        <h2>Introduction</h2>
+            <p>Hello my name is <strong>Tarek Zand</strong> but my friends call me <Strong>Tar</Strong>.</p>
+        <h3>About Me</h3>
+            <h4>Past</h4>
+                <p>I was born many moons ago in a small island in africa. Although I never 
+                    met my real parents I grew up in a very loving bush with my adoptive 
+                    parents. It wasnt until i first came in contact with other humans 
+                    that i realized what my adoptive parents were, Apes!!</p>
+            <h4>Present</h4>
+                <p>Currently i spend my days screaming at the top of my lungs for 
+                    no reason and playing with my friends. I recently met this girl, 
+                    Jane, and although i dont know what are the sounds coming from her 
+                    mouth she is so fine that I have to be around her. 
+                    Her dad i dont really care about. </p>
+            <h4>Future</h4>
+                <p>I would love to venture out with Jane and see the world. 
+                    Hopefully her dad doesnt come. I want to lear so much and 
+                    see what is out there! Maybe i can find my real parens too. 
+                    Finnally, I want to be a master Coder Like Patrick. Maybe 
+                    have a cool hair bun too!</p>
+        <div id="pictures"></div>
+            <h3>Picture</h3>
+            <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\th.jpg" />
+            <h4>Me as a baby</h4>
+            <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\family.jpg"/>
+            <h4>My Family</h4>
+            <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\me.jpg"/>
+            <h4>Me as a now</h4>
+            <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\jane.jpg"/>
+            <h4>Jane</h4>
+            <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\janedad.jpg"/>
+            <h4>Jane's Dad</h4>
+        </div>
+
+
+    <footer><h2>Thank you for visiting. Hope you dont beliebe anything I wrote</h2></footer>
+
+    </body>
+</html>
