--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
+<!DOCTYPE html>
 <html>
-    <header><h1>My Story</h1></header>
+    <head>
+            <link href="style.css" type="text/css" rel="stylesheet">
+
+            <title class= "title uppercase">My Story</title>
+            <h1 id="large-title">My Story</h1>
+    </head>
     <body> 
-        <h2>Introduction</h2>
+        <h2 class="green bold"class="green bold">Introduction</h2>
             <p>Hello my name is <strong>Tarek Zand</strong> but my friends call me <Strong>Tar</Strong>.</p>
-        <h3>About Me</h3>
+        <h3>My Story</h3>
             <h4>Past</h4>
                 <p>I was born many moons ago in a small island in africa. Although I never 
                     met my real parents I grew up in a very loving bush with my adoptive 
@@ -21,17 +27,27 @@
                     see what is out there! Maybe i can find my real parens too. 
                     Finnally, I want to be a master Coder Like Patrick. Maybe 
                     have a cool hair bun too!</p>
-        <div id="pictures"></div>
+        <div id="pictures">
             <h3>Picture</h3>
-            <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\th.jpg" />
+            <a href="default.asp">
+                <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\th.jpg" style="width:42px;height:42px;border:0;">
+            </a>
             <h4>Me as a baby</h4>
-            <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\family.jpg"/>
+            <a href="default.asp">
+                <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\family.jpg" style="width:42px;height:42px;border:0;">
+            </a>
             <h4>My Family</h4>
-            <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\me.jpg"/>
+            <a href="default.asp">
+                <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\me.jpg" style="width:42px;height:42px;border:0;">
+            </a>
             <h4>Me as a now</h4>
-            <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\jane.jpg"/>
+            <a href="default.asp">
+                <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\jane.jpg" style="width:42px;height:42px;border:0;"> 
+            </a>
             <h4>Jane</h4>
-            <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\janedad.jpg"/>
+            <a href="default.asp">
+                <img src= "\Users\to0th\Documents\lc101\html-me-something\Pictures\janedad.jpg" style="width:42px;height:42px;border:0;">
+            </a>
             <h4>Jane's Dad</h4>
         </div>
 
